catch-up update for code state as of 2019-Apr-25:
mainly, add support for right-button gestures on doors:

add new door primitives F_DELETEDOORBYNAME F_NEWDOOR3 F_NEWDOOR4 F_ENTERDOORBACKWARDS, conditionals on exec retvals, and new flow control primitives F_RETURNIFCLIPEQ F_RETURNIFCLIPNEQ F_FUNCTIONIFEXITVALEQ F_FUNCTIONIFEXITVALEQELSE F_RETURNIFEXITVALEQ F_RETURNIFEXITVALNEQ F_RETURNIFRETVALNOK F_RETURNIFRETVALOK: add FS4KEYWORD in gram.y (and corresponding support for Action4 in AddToMenu(), AddFuncKey(), CreateTitleButton(), ExecuteFunction(), and door_add() as "backward_destination");

add enum door_direction (DOOR_FORWARD/DOOR_BACKWARD) arg to door_enter();

also update various automake artifacts that probably shouldn't have been version-controlled in the first place.

--- a/Makefile.am
+++ b/Makefile.am
@@ -116,6 +116,8 @@ lastmake.c: FORCE
 
 gram.h: gram.c
 
+gram.h gram.c: gram.y
+
 #nexpm: contrib/nexpm/nexpm.c
 #	$(vtwm_LINK) -o $@ -Icontrib/nexpm $^ $(vtwm_LDADD) $(LIBS)
 
